# PAI

./: .gitignore  Cargo.toml  DEVICE_VERIFICATION.md  MIGRATION-PLAN.md  PLAN-Gemma4-Migration.md  README.md  STATUS.md
.github/workflows/: android-ci.yml  desktop-ci.yml  distribution-ci.yml  mobile-protection.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: accessibility.rs  agent.rs  browser.rs  documents.rs  llama.rs  main.rs  recording.rs  safety.rs  security.rs  voice.rs
docs/: ARCHITECTURE.md  AUDIT-bugs-Phase0.md  AUDIT_CURRENT_STATE.md  AUDIT_REPORT.md  BLIND_AID_MODEL.md  DEVICE_VALIDATION_2026-07-16.md  DEVICE_VALIDATION_2026-07-17.md  EVIDENCE_AUDIT.md  INSTALLER_AND_DISTRIBUTION.md  MOBILE_GOLDEN_BASELINE.md  MODELS.md  MODEL_ACQUISITION_AND_DISTRIBUTION.md  OFFLINE_DOCUMENT_SKILLS.md  PLAN-eyes-free-assist.md  SAFETY.md  SPEECH_MODEL_QUALIFICATION.md  VOICE_AGENT_HARDENING_2026-07-21.md  agent-flow.md  local-architecture.md  localbrain-implementation.md  model-licenses.md  phone-test-plan.md  phonecontrol-implementation.md  quick-start.md  setup-guide.md  step-by-step-implementation.md  test-checklist.md  tool-schema-registry.md  verification-guide.md  voice-module-implementation.md
installer-pwa/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
screenshots/: README.md
scripts/: MOBILE_GOLDEN_HASHES.txt  START_UNOONE_WINDOWS.bat  start_unoone_mac.command  verify-mobile-untouched.ps1  verify-mobile-untouched.py  verify-mobile-untouched.sh  verify_unoone_v2_invariants.py
(+371 files in other folders)
