[package]
name = "unoone-power"
version = "0.1.0"
description = "UnoOne Power — Private AI Desktop Workstation"
authors = ["InBharat Ai"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sys-info = "0.9"
num_cpus = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2" }