[package]
name = "unoone-power"
version = "0.1.0"
description = "UnoOne Power — Private AI Desktop Workstation"
authors = ["InBharat Ai"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sys-info = "0.9"
num_cpus = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
unoone-vault-core = { path = "../../../packages/vault-core" }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
base64-url = "3"
cpal = "0.15"
hound = "3.5"
lopdf = { version = "0.33", default-features = false, features = ["nom_parser"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

[build-dependencies]
tauri-build = { version = "2" }